--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -21,6 +21,30 @@ jobs:
         uses: actions/checkout@v4
       - name: Setup Pages
         uses: actions/configure-pages@v4
+      - name: Cache resources
+        uses: actions/cache@v3
+        with:
+          path: |
+            .cache
+            node_modules
+          key: ${{ runner.os }}-build-${{ hashFiles('**/lockfiles') }}
+          restore-keys: |
+            ${{ runner.os }}-build-
+      - name: Install minification tools
+        run: |
+          npm install -g html-minifier uglify-js clean-css-cli
+      - name: Optimize assets
+        run: |
+          mkdir -p optimized
+          # Minify HTML files
+          find . -name "*.html" -type f -exec html-minifier --collapse-whitespace --remove-comments --remove-optional-tags --remove-redundant-attributes --remove-script-type-attributes --remove-tag-whitespace --use-short-doctype --minify-css true --minify-js true {} -o optimized/{} \;
+          # Minify CSS files (skip already minified)
+          find . -name "*.css" -not -name "*.min.css" -type f -exec cleancss -o optimized/{} {} \;
+          # Minify JS files (skip already minified)
+          find . -name "*.js" -not -name "*.min.js" -type f -exec uglifyjs {} -o optimized/{} -c -m \;
+          # Copy all optimized files back
+          cp -rf optimized/. .
+          rm -rf optimized
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
